--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,6 +8,12 @@
     </style>
     <style name="Custom_hint">
         <item name="android:fontFamily">@font/montserrat_extrabold</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColorHint">@color/lavender</item>
+    </style>
+    <style name="Custom_small_button">
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="custom_spinner_text">
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
