Committed as of 11/08 17-31

--- a/app/src/main/res/layout/activity_fill_out.xml
+++ b/app/src/main/res/layout/activity_fill_out.xml
@@ -296,7 +296,8 @@
                 style="@style/Custom_hint"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="TRANSACTION NUMBER" />
+                android:hint="TRANSACTION NUMBER"
+                android:textColor="@color/lavender" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
