--- a/app/src/main/res/layout/activity_final_page.xml
+++ b/app/src/main/res/layout/activity_final_page.xml
@@ -70,6 +70,7 @@
 
         <Button
             android:id="@+id/goBack"
+            style="@style/Custom_small_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -83,6 +84,7 @@
 
         <Button
             android:id="@+id/screenShot"
+            style="@style/Custom_small_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
