--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -138,7 +138,7 @@
             android:layout_marginStart="4dp"
             android:fontFamily="@font/montserrat_medium"
             android:gravity="start"
-            android:text="Mygz Molino"
+            android:text="MygzMolinovlogs"
             android:textColor=" #7407A3"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView7"
@@ -165,7 +165,7 @@
             android:layout_marginStart="4dp"
             android:fontFamily="@font/montserrat_medium"
             android:gravity="start"
-            android:text="Mygz Molino"
+            android:text="mygz.molino"
             android:textColor=" #7407A3"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView8"
@@ -193,7 +193,7 @@
             android:layout_marginStart="4dp"
             android:fontFamily="@font/montserrat_medium"
             android:gravity="start"
-            android:text="&quot;@mygz.molino&quot;"
+            android:text="mygz.molinoii"
             android:textColor=" #7407A3"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView9"
